significant refactor to implement support for large catalogs.
cut out some features, streamlined some others to make it a more intuitive and straight forward process

--- a/bm_catalogreducer/cartridge/bm_catalogreducer.properties
+++ b/bm_catalogreducer/cartridge/bm_catalogreducer.properties
@@ -1,4 +1,4 @@
-## cartridge.properties for cartridge bm_catalogreducer
-#Tue Oct 28 13:01:58 EDT 2014
+# cartridge.properties for cartridge bm_catalogreducer
+# Tue Mar 14 14:33:03 MST 2023
 demandware.cartridges.bm_catalogreducer.multipleLanguageStorefront=true
 demandware.cartridges.bm_catalogreducer.id=bm_catalogreducer
